src/test/deca/context/valid/with_object/class_name_method.deca
class A {
    A a(){ return new A();}
}