src/test/deca/context/invalid/oracle/binary_op_eq_with_one_class_right.deca
class A{}

{
    A a = new A();
    50 == a;
}